--- a/frontend/src/app/admin/entry-route/administration/admin/site-builder/page/page-create/page-create.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/site-builder/page/page-create/page-create.component.html
@@ -3,8 +3,8 @@
     <h3 class="card-title">Vytvořit stránku</h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
-    <form [formGroup]="createPageForm" appGlobalFormError>
-      <ng-container #globalFormErrors></ng-container>
+    <form [formGroup]="createPageForm">
+      <app-global-form-error></app-global-form-error>
       <input appFormError type="text" class="form-control" placeholder="Název stránky" formControlName="name">
       <div class="container-fluid mt-3">
         <div class="row justify-content-end">
