--- a/frontend/src/app/plugins/base-admin/admin/plugin-admin.component.html
+++ b/frontend/src/app/plugins/base-admin/admin/plugin-admin.component.html
@@ -15,7 +15,7 @@
     <div class="col-9">
       <div class="card card-primary card-outline">
         <div class="card-body">
-          <router-outlet></router-outlet>
+          <router-outlet (activate)="onRouterOutletActivate($event)"></router-outlet>
         </div>
       </div>
     </div>
