--- a/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/palette-builder/page-block/page-block.component.html
+++ b/frontend/src/app/admin/entry-route/administration/admin/page/page-builder/palette-builder/page-block/page-block.component.html
@@ -3,10 +3,6 @@
     <i class="fas fa-arrows-alt handle"></i>
   </div>
   <div #palette_content class="block-content grid-stack">
-    <app-palette-item class="grid-stack-item" [gridStackNode]="gridNode" *ngFor="let gridNode of gridNodes"
-                      [attr.data-gs-x]="gridNode.x"
-                      [attr.data-gs-y]="gridNode.y" [attr.data-gs-width]="gridNode.width"
-                      [attr.data-gs-height]="gridNode.height"
-    ></app-palette-item>
+    <app-palette-item class="grid-stack-item" [paletteItemConfig]="gridNode" *ngFor="let gridNode of gridNodes"></app-palette-item>
   </div>
 </div>
