--- a/frontend/src/app/admin/entry-route/administration/menu/menu.component.html
+++ b/frontend/src/app/admin/entry-route/administration/menu/menu.component.html
@@ -23,4 +23,12 @@
       </p>
     </a>
   </li>
+  <li class="nav-item">
+    <a routerLink="file" routerLinkActive="active" class="nav-link">
+      <i class="nav-icon fas fa-copy"></i>
+      <p>
+        Soubory
+      </p>
+    </a>
+  </li>
 </ul>
